# mattermost-summarizer

./: .gitignore  AGENTS.md  README.md  SECURITY_AUDIT_TODOS.md  TODOS.md  pyproject.toml  summarize.py
docs/: architecture.md  gh-copilot.md
ideas/: mattermost-unread.md  property-testing.md
openspec/: config.yaml
openspec/changes/logging-stdout/: design.md  proposal.md  tasks.md
openspec/changes/mattermost-summarizer/: design.md  proposal.md
openspec/changes/multi-agent-recursive-summarizer/: tasks.md
openspec/changes/pre-extract-urls-before-agent-loop/: design.md  proposal.md  tasks.md
openspec/changes/prefetch-root-thread/: proposal.md  tasks.md
openspec/changes/reduce-reference-tracking-llm-roundtrips/: design.md  proposal.md  tasks.md
openspec/changes/summarization-levels/: tasks.md
openspec/changes/v2-context-enrichment-tools/: design.md  proposal.md  tasks.md
openspec/specs/atomic-url-follow/: spec.md
openspec/specs/fetch-file/: spec.md
openspec/specs/fetch-github-issue/: spec.md
openspec/specs/fetch-launchpad-bug/: spec.md
openspec/specs/llm-critic/: spec.md
openspec/specs/mattermost-summarizer/: spec.md
openspec/specs/orchestrator-agent/: spec.md
openspec/specs/recursive-reference-following/: spec.md
src/mattermost_summarizer/: agent.py  client.py  config.py  critic.py  models.py  ssrf.py  summarizer.py  tracing_patch.py  utils.py
tests/: test_client.py  test_config.py  test_effective_depth.py  test_levels.py  test_multi_agent.py  test_parse_permalink.py  test_ssrf.py  test_summarize_cli.py  test_summarizer.py  test_tools.py
(+61 files in other folders)
