[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mattermost-summarizer"
version = "0.1.0"
description = "Agentic Mattermost conversation summarizer using OpenHands SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mattermost_summarizer"]
include = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
package_root = "src"
disable_error_code = ["unused-ignore"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
stubPath = ""
